# VerusHash

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSES_ORIGIN.md  README.md  uint256.h  verushash_lib.cpp  verushash_lib.h  verushash_mine.cpp
.github/workflows/: build.yml
crypto/: haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  haraka_portable_cpp.cpp  sse2neon.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h  verus_runtime.cpp
crypto/compat/: sse2neon.h
